--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step required'",
-    "postinstall": "echo 'Installation complete'"
+    "build": "echo 'No build step required'"
   },
   "dependencies": {
     "express": "^4.18.2",
